--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,15 @@ body {
     font-family: Arial, sans-serif;
 }
 
+#pagina-container {
+    max-width: 95%;
+    margin: auto;
+    background-color: #e0e0e0;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 .logo {
     max-height: 50px;
     width: auto;
@@ -19,6 +28,8 @@ table {
     width: 100%;
     border-collapse: collapse;
     background: white;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 th, td {
