--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f4f4f9;
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 14px;
     color: #333;
 }
@@ -18,7 +18,7 @@ header {
     background-color: #007bff;
     color: white;
     padding: 15px;
-    text-align: center;
+    text-align: left;
     font-size: 18px;
     border-radius: 15px 15px 0 0;
 }
@@ -35,8 +35,6 @@ footer {
 .logo {
     max-height: 40px;
     width: auto;
-    display: block;
-    margin: auto;
 }
 
 #tabela-container {
@@ -122,4 +120,18 @@ input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 14px;
+}
+
+.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+.dark-mode table {
+    background: #222;
+    color: white;
+}
+
+.dark-mode th {
+    background: #0056b3;
 }
